--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
@@ -44,8 +46,12 @@
     "tiged": "^2.12.7"
   },
   "devDependencies": {
+    "@phucbm/banner": "^0.0.2",
     "@types/fs-extra": "^11.0.4",
+    "@types/jest": "^30.0.0",
     "@types/prompts": "^2.4.9",
+    "jest": "^30.0.3",
+    "ts-jest": "^29.4.0",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   }
