--- a/.github/workflows/dependabot-release.yml
+++ b/.github/workflows/dependabot-release.yml
@@ -1,7 +1,8 @@
 name: Dependabot Release
 
 on:
-  push:
+  pull_request:
+    types: [ closed ]
     branches: [ main ]
   workflow_dispatch: # Enables manual trigger via GitHub web
 
