use pull_request_target

--- a/.github/workflows/dependabot-release.yml
+++ b/.github/workflows/dependabot-release.yml
@@ -1,7 +1,7 @@
 name: Dependabot Release
 
 on:
-  pull_request:
+  pull_request_target:
     types: [ closed ]
     branches: [ main ]
   workflow_dispatch: # Enables manual trigger via GitHub web
