--- a/.github/workflows/test-merge-pr.yml
+++ b/.github/workflows/test-merge-pr.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Test and merge PR # https://github.com/marketplace/actions/test-pr-action
         uses: phucbm/test-pr-action@v1
         with:
-          dependabot-auto-merge: 'true'  # Optional: auto-merge Dependabot PRs
           personal-access-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          dependabot-auto-merge: 'false'  # Optional: auto-merge Dependabot PRs
